--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bootstrap-social": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.9",
     "typeface-abel": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
